--- a/slides/6.requirements-engineering.html
+++ b/slides/6.requirements-engineering.html
@@ -213,6 +213,10 @@ name: security-requirements
 
 # Security Requirements
 
+--
+
+## Overview
+
 Focused on three P's: 
 
 --
@@ -226,6 +230,31 @@ Focused on three P's:
 --
 
 - **P**rocess: e.g. lack of integration of security concerns throughout process, inadequate maintenance
+
+---
+
+name: compliance-requirements
+
+# Compliance Requirements
+
+--
+
+## Overview
+
+Software used in certain industries or certain purposes must abide by government regulation or industry standards, e.g.
+
+Government regulations:
+- Health Insurance Portability and Accountability Act (HIPPA)
+- Federal Educational Right to Privacy Act (FERPA)
+- USA Patriot Act (includes Know Your Customer requirement for financial institutions)
+- Federal Information Security Management Act (FISMA)
+- Sarbanes-Oxley Act (SOX)
+- Gramm-Leach-Biley Act (GLBA)
+- New York State Information Security Breach and Notification Act
+- Federal Financial Institutions Examination Council (FFIEC)
+- EU Data Privacy Directive
+
+... and so on ...
 
 ---
 
