--- a/slides/5.git-and-github.html
+++ b/slides/5.git-and-github.html
@@ -476,7 +476,7 @@ template: merge
 - A typical workflow:
 
 ```bash
-git fetch origin # get latest code in all branches from the remote origin server
+git pull origin # get latest code in all branches from the remote origin server
 
 git checkout some-branch-name # switch to a branch where you will make changes in isolation... either first create this branch with 'git branch some-branch-name' or do 'git checkout -b some-branch-name' to create it and check it out at once
 
