--- a/slides/6.requirements-engineering.html
+++ b/slides/6.requirements-engineering.html
@@ -15,12 +15,14 @@ A disciplined approach to figuring out what needs to be done.
 # Agenda
 
 1. [Overview](#overview)
-2. [Motivations](#motivations)
-3. [Types](#types)
-4. [User Requirements](#user-requirements)
-4. [Security Requirements](#security-requirements)
-5. [Requirements Elicitation](#elicitation)
-6. [Conclusions](#conclusions)
+1. [Motivations](#motivations)
+1. [Types](#types)
+1. [User Requirements](#user-requirements)
+1. [Business Requirements](#business-requirements)
+1. [Compliance Requirements](#compliance-requirements)
+1. [Security Requirements](#security-requirements)
+1. [Requirements Elicitation](#elicitation)
+1. [Conclusions](#conclusions)
 
 ---
 
@@ -209,6 +211,57 @@ template: user-requirements
 
 ---
 
+name: business-requirements
+
+# Business Requirements
+
+--
+
+## Overview
+
+An organization engages in a development project for a reason.  Business requirements documents document this reason and any other business constraints.  This may include:
+
+- project objectives 
+  - i.e. how success is defined: e.g. increased income, customer base, customer satisfaction, publicity, etc.
+- the scope of the project
+  - what will be done
+  - initial timeline
+  - initial resource plan
+- business requirements:
+  - time constraints
+  - budget constraints
+  - any other resource constraints
+
+... and so on ...
+
+---
+
+name: compliance-requirements
+
+# Compliance Requirements
+
+--
+
+## Overview
+
+Software used in certain industries or certain purposes must abide by government regulation or industry standards, e.g.
+
+Government regulations:
+- [Health Insurance Portability and Accountability Act](https://en.wikipedia.org/wiki/Health_Insurance_Portability_and_Accountability_Act) (HIPPA)
+- [Children's Online Privacy Protection Act](https://en.wikipedia.org/wiki/Children's_Online_Privacy_Protection_Act) (COPPA)
+- [Family Educational Right to Privacy Act](https://en.wikipedia.org/wiki/Family_Educational_Rights_and_Privacy_Act) (FERPA)
+- [USA Patriot Act](https://en.wikipedia.org/wiki/Patriot_Act) (includes Know Your Customer requirement for financial institutions)
+- [Federal Information Security Management Act](https://en.wikipedia.org/wiki/Federal_Information_Security_Management_Act_of_2002) (FISMA)
+- [Sarbanes-Oxley Act](https://en.wikipedia.org/wiki/Sarbanes%E2%80%93Oxley_Act) (SOX)
+- [Gramm-Leach-Biley Act](https://en.wikipedia.org/wiki/Gramm%E2%80%93Leach%E2%80%93Bliley_Act) (GLBA)
+- [New York State Information Security Breach and Notification Act](https://ag.ny.gov/new-york-state-information-security-breach-and-notification-act)
+- [Federal Financial Institutions Examination Council](https://en.wikipedia.org/wiki/Federal_Financial_Institutions_Examination_Council) (FFIEC)
+- [EU General Data Protection Regulation](https://en.wikipedia.org/wiki/General_Data_Protection_Regulation)
+
+... and so on ...
+
+---
+
 name: security-requirements
 
 # Security Requirements
@@ -230,31 +283,6 @@ Focused on three P's:
 --
 
 - **P**rocess: e.g. lack of integration of security concerns throughout process, inadequate maintenance
-
----
-
-name: compliance-requirements
-
-# Compliance Requirements
-
---
-
-## Overview
-
-Software used in certain industries or certain purposes must abide by government regulation or industry standards, e.g.
-
-Government regulations:
-- Health Insurance Portability and Accountability Act (HIPPA)
-- Federal Educational Right to Privacy Act (FERPA)
-- USA Patriot Act (includes Know Your Customer requirement for financial institutions)
-- Federal Information Security Management Act (FISMA)
-- Sarbanes-Oxley Act (SOX)
-- Gramm-Leach-Biley Act (GLBA)
-- New York State Information Security Breach and Notification Act
-- Federal Financial Institutions Examination Council (FFIEC)
-- EU Data Privacy Directive
-
-... and so on ...
 
 ---
 
