--- a/slides/2.what-is-software-engineering.html
+++ b/slides/2.what-is-software-engineering.html
@@ -152,10 +152,7 @@ name: challenges
 
 # Challenges
 
----
-
-template: challenges
-name: abstract-challenge-1
+--
 
 ## Software is abstract
 
@@ -163,17 +160,11 @@ Linus Torvalds (creator of Git and the Linux kernel), [CNN interview from 2000](
 
 > You have much more freedom than you have when you're building a bridge or a building. You can pretty much make up your own rules. [...] It is artistry... at least for good programmers.
 
----
-
-template: abstract-challenge-1
-name: abstract-challenge-2
+--
 
 The bits and bytes on the machine are not constrained by physical limitations, limits in manufacturing, or transportation logistics. This allows for the development of a wild variety of systems - virtually any idea can be turned into software with little overhead.
 
----
-
-template: abstract-challenge-2
-name: abstract-challenge-3
+--
 
 This same lack of constraints allows for glutonous programmers to write code that can become increasingly complicated, deep, and difficult to maintain.
 
@@ -188,31 +179,19 @@ name: complex-challenge-1
 
 > Adding manpower to a late software project makes it later.
 
----
-
-template: complex-challenge-1
-name: complex-challenge-2
+--
 
 Creating quality software is hard, especially on a large scale.
 
----
-
-template: complex-challenge-2
-name: complex-challenge-3
+--
 
 - Developer onboarding
 
----
-
-template: complex-challenge-3
-name: complex-challenge-4
+--
 
 - System complexity
 
----
-
-template: complex-challenge-4
-name: complex-challenge-5
+--
 
 - Client expectations
 
@@ -225,38 +204,23 @@ name: more-challenge-1
 
 Well-designed, functional, maintainable software usually includes many artifacts besides a program:
 
----
-
-template: more-challenge-1
-name: more-challenge-2
+--
 
 - documentation
 
----
-
-template: more-challenge-2
-name: more-challenge-3
+--
 
 - configuration data
 
----
-
-template: more-challenge-3
-name: more-challenge-4
+--
 
 - libraries
 
----
-
-template: more-challenge-4
-name: more-challenge-5
+--
 
 - data storage resources
 
----
-
-template: more-challenge-5
-name: more-challenge-6
+--
 
 - supportive web sites
 
@@ -267,58 +231,52 @@ name: demand-challenge-1
 
 ## Demand for software is increasing
 
-From the [Bureau of Labor Statistics](https://www.bls.gov/ooh/computer-and-information-technology/software-developers.htm):
+From the [Bureau of Labor Statistics](https://www.bls.gov/ooh/computer-and-information-technology/software-developers.htm), comparing 2018 to 2020:
+
+--
 
 - **Number of Jobs, 2018:** 1,365,500
 
----
+- **Number of Jobs, 2020:** 1,847,900
 
-template: demand-challenge-1
-name: demand-challenge-2
+--
 
 - **Job Outlook, 2018-28:** 21% (Much faster than average)
 
----
+- **Job Outlook, 2020-30:** 22% (Much faster than average)
 
-template: demand-challenge-2
-name: demand-challenge-3
+--
 
-- **Employment Change, 2018-28:** 284,100
+- **Employment Change, 2018-28:** 284,100 (expected)
 
----
+- **Employment Change, 2020-30:** 409,500 (expected)
 
-template: demand-challenge-3
-name: demand-challenge-4
+--
 
 - **2018 Median Pay:** $105,590 per year / $50.77 per hour
 
+- **2018 Median Pay:** $110,140 per year / $52.95 per hour
+
 ---
 
-template: demand-challenge-4
+template: challenges
 name: demand-challenge-5
+
+## Demand for software is increasing (continued)
+
+From the [Bureau of Labor Statistics](https://www.bls.gov/ooh/computer-and-information-technology/software-developers.htm) - the same in both 2018 and 2020:
+
+--
 
 - **Typical Entry-Level Education:** Bachelor's degree
 
----
+--
 
-template: demand-challenge-5
-name: demand-challenge-6
+- **Work Experience in a Related Occupation Required:** None
 
-- **Work Experience in a Related Occupation:** None
+--
 
----
-
-template: demand-challenge-6
-name: demand-challenge-7
-
-- **Work Experience in a Related Occupation:** None
-
----
-
-template: demand-challenge-7
-name: demand-challenge-8
-
-- **On-the-job Training:** None
+- **On-the-job Training Required:** None
 
 ---
 
@@ -329,12 +287,11 @@ name: time-challenge-1
 
 Engineering is the application of science and knowledge to practical applications.
 
+--
+
 Software engineering aims to produce real-world software that can be used by its customers to solve their problems.
 
----
-
-template: time-challenge-1
-name: time-challenge-2
+--
 
 There is almost universally a budget and a deadline. Engineers must figure out how to solve the problem with those constraints.
 
@@ -394,7 +351,7 @@ template: software-crisis
 
 ## The Software Crisis
 
-"[Software’s Chronic Crisis](https://knowledge.kitchen/mediawiki/images/e/e5/Software%27s_Chronic_Crisis.pdf)", Scientific American, Sept. 1994:
+"[Software’s Chronic Crisis]({{ site.baseurl }}/slides/images/Scientific_American_Softwares_Chronic_Crisis.pdf)", Scientific American, Sept. 1994:
 
 > By the time [the art of programming] reached 25, the difficulties of building big software loomed so large that in the autumn of 1968 the NATO Science Committee convened some 50 top programmers, computer scientists and captains of industry to plot a course out of what had come to be known as the software crisis. Although the experts could not contrive a road map to guide the industry toward firmer ground, they did coin a name for that distant goal: software engineering, now defined formally as “the application of a systematic, disciplined, quantifiable approach to the development, operation and maintenance of software.”
 >
