--- a/slides/2.what-is-software-engineering.html
+++ b/slides/2.what-is-software-engineering.html
@@ -98,6 +98,8 @@ Job titles vary wildly in industry. For example, each of these titles may or may
 - Programmer
 - Ninja
 - Requirements engineer
+- DevOps engineer
+- Site reliability engineer
 - Testing engineer
 - Q/A engineer
   ... and many more
