acceptance criteria update

--- a/slides/3.scrum.html
+++ b/slides/3.scrum.html
@@ -323,7 +323,11 @@ template: events
 
 ### User stories
 
-User Stories each have a set of **Acceptance Criteria**.
+User Stories each can have a set of **Acceptance Criteria**.
+
+--
+
+- These provide additional detail about what specific features are necessary for the user story to be satisfied.
 
 --
 
