--- a/slides/6.requirements-engineering.html
+++ b/slides/6.requirements-engineering.html
@@ -200,6 +200,7 @@ This may have the following additional notes attached:
 > 4. Customer password is captured and saved
 > 5. Invalid name, email, phone, and passwords are rejected
 > 6. Customer is signed in automatically after registration
+> 7. An error message indicates any invalid values entered into the form
 
 ---
 
