--- a/slides/7.javascript-basics.html
+++ b/slides/7.javascript-basics.html
@@ -44,7 +44,7 @@ Javascript, also known as ECMAScript, has a few unusual features that trouble pr
 
 --
 
-- loose typing of variables
+- loose typing of variables, and type 'coercion'
 
 --
 
