--- a/slides/2.what-is-software-engineering.html
+++ b/slides/2.what-is-software-engineering.html
@@ -130,6 +130,16 @@ template: definition
 
 ## Definition by antithesis: bespoke development
 
+> It's tempting to see the archetypal Agile developer as a revival of the long-haired countercultural weirdo who lurked around the punch card machines of the late 1960s. But the two personas differ in important respects. The eccentrics of computing's early years wanted to program for the sheer thrill of putting this new technology to work. The coder of Agile's imagination is committed, above all, to the project. He hates administrative intrusion because it gets in the way of his greatest aspiration, which is to do his job at the highest level of professional performance.
+> 
+> - [Agile and the Long Crisis of Software](https://logicmag.io/clouds/agile-and-the-long-crisis-of-software/), by Miriam Posner
+
+---
+
+template: definition
+
+## Definition by antithesis: bespoke development
+
 The ideal of artisanal work is much pined for for its uniqueness and attention to detail.
 
 --
