better slide syntax

--- a/slides/8.uml-diagrams.html
+++ b/slides/8.uml-diagrams.html
@@ -29,15 +29,15 @@ name: overview
 
 # Overview
 
----
+--
 
-# Overview
+## Concept
 
 Primitive, standardized, easy-to-draw diagrams to quickly communicate software _structure_ and _behavior_.
 
 ---
 
-# Overview
+template: overview
 
 ## Types of diagrams
 
@@ -55,7 +55,7 @@ UML (Unified Modeling Language) provides for many types of diagrams, divided int
 
 ---
 
-# Overview
+template: overview
 
 ## Types of diagrams
 
@@ -69,9 +69,9 @@ name: best-practices
 
 # Best Practices
 
----
+--
 
-# Best Practices
+## Overview
 
 Regardless of which diagram type, following best practices keeps diagrams understandable and avoids common pitfalls.
 
@@ -82,7 +82,7 @@ Regardless of which diagram type, following best practices keeps diagrams unders
 
 ---
 
-# Best Practices
+template: best-practices
 
 ## Avoid crossed lines
 
@@ -92,7 +92,7 @@ Don't do this:
 
 ---
 
-# Best Practices
+template: best-practices
 
 ## Avoid crossed lines
 
@@ -102,7 +102,7 @@ Do this:
 
 ---
 
-# Best Practices
+template: best-practices
 
 ## Avoid diagonal and curved lines.
 
@@ -112,7 +112,7 @@ Don't do this:
 
 ---
 
-# Best Practices
+template: best-practices
 
 ## Avoid diagonal and curved lines.
 
@@ -122,7 +122,7 @@ Do this:
 
 ---
 
-# Best Practices
+template: best-practices
 
 ## Use consistent sizes
 
@@ -132,7 +132,7 @@ Don't do this:
 
 ---
 
-# Best Practices
+template: best-practices
 
 ## Use consistent sizes
 
@@ -142,7 +142,7 @@ Do this:
 
 ---
 
-# Best Practices
+template: best-practices
 
 ## Flow top-to-bottom, left-to-right
 
@@ -152,7 +152,7 @@ Don't do this:
 
 ---
 
-# Best Practices
+template: best-practices
 
 ## Flow top-to-bottom, left-to-right
 
@@ -166,15 +166,17 @@ name: classes
 
 # Classes
 
----
+--
 
-# Classes
+## Concept
 
 Used to display the attributes, methods, and interactions of object-oriented classes in code.
 
 ---
 
-# Classes
+template: classes
+
+## One Class
 
 A single class:
 
@@ -182,7 +184,9 @@ A single class:
 
 ---
 
-# Classes
+template: classes
+
+## Multiple Classes
 
 Relationships among classes, plus annotations, in a casual style:
 
@@ -194,15 +198,17 @@ name: use-cases
 
 # Use Cases
 
----
+--
 
-# Use Cases
+## Concept
 
 Used to indicate interactions between actors and the system.
 
 ---
 
-# Use Cases
+template: use-cases
+
+## Single actor
 
 A single actor, a single system:
 
@@ -210,9 +216,11 @@ A single actor, a single system:
 
 ---
 
-# Use Cases
+template: use-cases
 
-Multiple actors, multiple releases:
+## Multiple actors
+
+Multiple actors, multiple systems:
 
 ![UML use case diagram](../images/uml_use_case_diagram_complex.png)
 
@@ -222,15 +230,17 @@ name: activities
 
 # Activities
 
----
+--
 
-# Activities
+## Concept
 
 Flow charts often used to document a complex operation, the logic of one or more use cases, or any other process.
 
 ---
 
-# Activities
+template: activities
+
+## Example
 
 ![UML activity diagram](../images/uml_activity_diagram.png)
 
@@ -240,9 +250,9 @@ name: sequences
 
 # Sequences
 
----
+--
 
-# Sequences
+## Concept
 
 Used to validate and work out the logic and completeness of a certain scenario, often a use case or a part of a use case.
 
@@ -250,7 +260,9 @@ These show the entire sequence of messages sent among the objects and systems in
 
 ---
 
-# Sequences
+template: sequences
+
+## Example
 
 ![UML sequence diagram](../images/uml_sequence_diagram.png)
 
@@ -260,9 +272,9 @@ name: state-charts
 
 # State Charts
 
----
+--
 
-# State Charts
+## Concept
 
 Indicate the dynamic behavior of an entity based on its response to events, showing how the entity reacts to various events based on its current state.
 
@@ -270,7 +282,9 @@ Indicate the dynamic behavior of an entity based on its response to events, show
 
 ---
 
-# State Charts
+template: state-charts
+
+## Example
 
 A seminar, partial lifecycle:
 
@@ -278,7 +292,9 @@ A seminar, partial lifecycle:
 
 ---
 
-# State Charts
+template: state-charts
+
+## Example
 
 A seminar, complete lifecycle:
 
@@ -290,8 +306,6 @@ name: conclusions
 
 # Conclusions
 
----
-
-# Conclusions
+--
 
 Thank you. Bye.
