mention of requirements gathering earlier

--- a/slides/19.user-experience-design.html
+++ b/slides/19.user-experience-design.html
@@ -104,11 +104,11 @@ template: discovery
 
 ## Concept
 
-Similar to software development as a whole, User Experience Design work often begins with the **discovery** of at least:
+Similar to requirements gathering for software development as a whole, User Experience Design work often begins with the **discovery** of at least:
 
-- the organization's business goals
-- any technical constraints
+- organization's business goals
 - end-user's needs and desires
+- any technical constraints
 
 ---
 
