--- a/slides/19.user-experience-design.html
+++ b/slides/19.user-experience-design.html
@@ -427,9 +427,9 @@ User Experience Designers use a variety of tools to make diagrams - each organiz
 
 template: software
 
-## Our choice (beginner)
+## Our choice (for beginners and for all UML diagramming)
 
-When in doubt, use [draw.io](https://draw.io) to build your wireframes and site/app map.
+When in doubt, use [draw.io](https://draw.io) to build your wireframes, site/app map, and any other diagrams.
 
 - no frills
 - no cost
@@ -439,7 +439,7 @@ When in doubt, use [draw.io](https://draw.io) to build your wireframes and site/
 
 template: software
 
-## Our choice (pro)
+## Our choice (for pros and those who like good sophisticated apps)
 
 [Figma](https://figma.com) is currently the best-in-class application for developing wireframe diagrams, prototypes, and many other sorts of diagrams and designs.
 
@@ -507,7 +507,7 @@ There are a variety of software tools for building web site prototypes.
 
 template: prototyping
 
-## Our choice (basics)
+## Our choice (when all else fails)
 
 Use [InvisionApp](https://invision.com) to build your clickable prototypes.
 
@@ -518,7 +518,7 @@ Use [InvisionApp](https://invision.com) to build your clickable prototypes.
 
 template: prototyping
 
-## Our choice (crazy people)
+## Our choice (for pros and those who like sophisticated tools)
 
 [Figma](https://figma.com) has complex prototype functionality.
 
