--- a/slides/8.mongodb-crud.html
+++ b/slides/8.mongodb-crud.html
@@ -15,6 +15,7 @@ The dirty work of database data management.
 # Agenda
 
 1. [Overview](#overview)
+1. [Available Servers](#servers)
 1. [Example Data Set](#data-set)
 1. [Create](#create)
 1. [Operators](#operators)
@@ -229,6 +230,65 @@ The `mongo` command line client uses a Javascript command shell interpreter to a
 --
 
 We will show how to do common CRUD operations using the `mongo` client.
+
+---
+
+name: servers
+
+# Available Servers
+There are a variety of options for accessing a MongoDB server.
+- cloud-based servers
+- university servers
+- personal hosted servers
+
+--
+
+## Cloud-based servers
+[MongoDB Atlas](https://www.mongodb.com/cloud/atlas) 
+- cloud-based service that provides a free tier for small databases
+
+---
+
+template: servers
+
+## Local installation
+[MongoDB Community Server](https://www.mongodb.com/download-center/community) 
+- a free, open-source server that can be installed on your own computer
+
+---
+
+template: servers
+
+## Local installation (continued)
+[Docker image](https://hub.docker.com/_/mongo)
+- Docker containers are small-footprint portable software environments
+- MongoDB maintains a Docker container image that can be used to run a MongoDB server locally in a container.
+
+To use...
+- install and run [docker desktop](https://www.docker.com/get-started)
+- create a [dockerhub](https://hub.docker.com/signup) account
+- run command, `docker run --name mongodb_dockerhub -p 27017:27017 -e MONGO_INITDB_ROOT_USERNAME=admin -e MONGO_INITDB_ROOT_PASSWORD=secret -d mongo:latest`
+- connect to the database server from the command line: `docker exec -ti mongodb_dockerhub mongosh -u admin -p secret`
+- show the available databases: `show dbs`
+- select the database used by this app: `use your_db_name`... this will create a new database if one does not exist by that name
+- exit the database shell whenever you have had your fill: `exit`
+
+
+---
+
+template: servers
+
+## Graphical User Interfaces
+
+[MongoDB Compass](https://www.mongodb.com/products/compass)
+- free GUI client for MongoDB by MongoDB
+
+[Studio 3T](https://studio3t.com/free/)
+- free GUI client for MongoDB
+
+---
+
+template: servers
 
 ---
 
