--- a/slides/8.mongodb-crud.html
+++ b/slides/8.mongodb-crud.html
@@ -236,12 +236,18 @@ We will show how to do common CRUD operations using the `mongo` client.
 name: servers
 
 # Available Servers
+
+--
+
+## Overview
 There are a variety of options for accessing a MongoDB server.
 - cloud-based servers
 - university servers
 - personal hosted servers
 
---
+---
+
+template: servers
 
 ## Cloud-based servers
 [MongoDB Atlas](https://www.mongodb.com/cloud/atlas) 
