--- a/slides/8.mongodb-crud.html
+++ b/slides/8.mongodb-crud.html
@@ -212,9 +212,9 @@ Despite this MongoDB marketing, you can be sure that these organizations also us
 
 template: overview
 
-## CRUD with the mongo client
+## CRUD with the mongo shell client
 
-The `mongo` command line client uses a Javascript command shell interpreter to allow users to issue commands to any database to which they connect.
+The `mongosh` command line client uses a Javascript command shell interpreter to allow users to issue commands to any database to which they connect.
 
 --
 
@@ -244,7 +244,6 @@ There are a variety of options for accessing a MongoDB server.
 - cloud-based servers
 - university servers
 - personal hosted servers
-
 ---
 
 template: servers
@@ -252,6 +251,14 @@ template: servers
 ## Cloud-based servers
 [MongoDB Atlas](https://www.mongodb.com/cloud/atlas) 
 - cloud-based service that provides a free tier for small databases
+
+---
+
+template: servers
+
+## University servers
+[NYU CIMS MongoDB server](https://cims.nyu.edu/webapps/content/systems/userservices/databases/class-mongodb)
+- accessible to NYU students in courses related to databases.
 
 ---
 
@@ -280,6 +287,16 @@ To use...
 - exit the database shell whenever you have had your fill: `exit`
 
 
+---
+
+template: servers
+
+## Mongo Shell
+To access a MongoDB server from the command line, one needs to install [mongosh](https://www.mongodb.com/docs/mongodb-shell/).
+- connect to a server: `mongosh your_database_name --host your_hostname -u your_username -p`.
+- e.g. `mongosh example --host class-mongodb.cims.nyu.edu -u fb1258 -p`...  after running this command, you will be asked for your password and then let in.
+
+`
 ---
 
 template: servers
@@ -358,11 +375,11 @@ mongoimport --db your_database_name --collection books --host database_host --us
 
 template: data-set
 
-## Connect to the database with the mongo client
+## Connect to the database with the mongo shell client
 
 Once the data has been imported, you can log in to the database server using the `mongo` client:
 
-`mongo your_database_name --host your_hostname -u your_username -p`
+`mongosh your_database_name --host your_hostname -u your_username -p`
 
 - replace `your_database_name` with your own NYU Net ID
 - replace `your_hostname` with `class-mongodb.cims.nyu.edu`
