--- a/slides/8.mongodb-crud.html
+++ b/slides/8.mongodb-crud.html
@@ -345,7 +345,7 @@ template: data-set
 
 If you typically connect to the MongoDB database server from a web server, such as **i6** , it's easy to upload the data file to the web server using a Secure File Transfer (SFTP) application like [Cyberduck](https://cyberduck.io/).
 
-![Cyberduck login](../files/mongodb/cyberduck.png)
+![Cyberduck login]({{ site.baseurl }}/slides/images/mongodb/cyberduck.png)
 
 ---
 
