--- a/slides/8.mongodb-crud.html
+++ b/slides/8.mongodb-crud.html
@@ -318,7 +318,7 @@ name: data-set
 
 ## Save the data file
 
-This set of slides shows examples using a data set about books. To follow along, save the following JSON data into a file named [books.json](../files/mongodb/books.json).
+This set of slides shows examples using a data set about books. To follow along, save the following JSON data into a file named [books.json](({{ site.baseurl }}/slides/files/mongodb/books.json).
 
 ```javascript
 {"title": "Northanger Abbey", "author": "Austen, Jane", "year_written": 1814, "edition": "Penguin", "price":  18.2}
@@ -344,7 +344,7 @@ template: data-set
 
 If you typically connect to the MongoDB database server from a web server, such as **i6** , it's easy to upload the data file to the web server using a Secure File Transfer (SFTP) application like [Cyberduck](https://cyberduck.io/).
 
-![Cyberduck login]({{ site.baseurl }}/slides/images/mongodb/cyberduck.png)
+![Cyberduck login]({{ site.baseurl }}/slides/images/cyberduck.png)
 
 ---
 
