--- a/slides/8.mongodb-crud.html
+++ b/slides/8.mongodb-crud.html
@@ -353,7 +353,7 @@ template: data-set
 ## Import the data into MongoDB
 
 To import the data file into a MongoDB database collection, go to the UNIX/Linux command line from where you typically connect to a MongoDB database, navigate to whichever folder you saved the data file into, and issue the following command:
-
+- Note that this requires the `mongoimport` utility - see [installation instructions](https://www.mongodb.com/docs/database-tools/mongoimport/#installation) if the command is not found on your system.
 ```bash
 mongoimport --db your_database_name --collection books --host database_host --username your_username --password your_password --type json --file books.json
 ```
