mongo database tools

--- a/slides/8.mongodb-crud.html
+++ b/slides/8.mongodb-crud.html
@@ -296,6 +296,8 @@ To access a MongoDB server from the command line, one needs to install [mongosh]
 - connect to a server: `mongosh your_database_name --host your_hostname -u your_username -p`.
 - e.g. `mongosh example --host class-mongodb.cims.nyu.edu -u fb1258 -p`...  after running this command, you will be asked for your password and then let in.
 
+Note that `mongosh` comes with Mongo server installations but can be installed separately with [MongoDB Database Tools](https://www.mongodb.com/docs/database-tools/) for those not running a server locally.
+
 ---
 
 template: servers
