--- a/slides/8.mongodb-crud.html
+++ b/slides/8.mongodb-crud.html
@@ -343,7 +343,7 @@ name: data-set
 
 ## Save the data file
 
-This set of slides shows examples using a data set about books. To follow along, save the following JSON data into a file named [books.json](({{ site.baseurl }}/slides/files/mongodb/books.json).
+This set of slides shows examples using a data set about books. To follow along, save the following JSON data into a file named [books.json]({{ site.baseurl }}/slides/files/mongodb/books.json).
 
 ```javascript
 {"title": "Northanger Abbey", "author": "Austen, Jane", "year_written": 1814, "edition": "Penguin", "price":  18.2}
